PUT and POST to Plans, Meals, Exercises